// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproStatus > Snapshots > renders the component with all properties filled in 1`] = `
<span
  class="
    amelipro-status
    d-inline-flex
    font-weight-bold
    mb-0
  "
  id="modified-unique-id"
  style="
    border: 2px solid #000;
    border-radius: 16px;
    padding: 15px 16px;
  "
>
  Modified label
</span>
`;

exports[`AmeliproStatus > Snapshots > renders the component with only required properties filled in 1`] = `
<p
  class="
    amelipro-status
    bg-ap-yellow-lighten-3
    d-inline-flex
    font-weight-bold
    mb-0
  "
  style="
    border: 2px solid transparent;
    border-radius: 16px;
    padding: 4px 12px;
  "
>
  Brouillon
</p>
`;
